name:               phash
version:            0.0.6
synopsis:           Haskell bindings to pHash, the open source perceptual hash library
description:        See http://www.phash.org/ for more info. Note that you
                    must have libphash installed on your system to use this
                    library. Check your system library.
license:            GPL-3
license-file:       LICENSE
author:             Michael Xavier <michael@michaelxavier.net>
maintainer:         Michael Xavier <michael@michaelxavier.net>
copyright:          Copyright: (c) 2014 Michael Xavier
category:           Data
build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: README.md
                    test/fixtures/grump_gray.jpg
                    test/fixtures/grump.jpg
                    test/fixtures/grump_flip.jpg
                    test/fixtures/grump_bright.jpg
homepage:           http://github.com/michaelxavier/phash
bug-reports:        http://github.com/michaelxavier/phash/issues

library
  exposed-modules:  Data.PHash
  exposed-modules:  Data.PHash.Image
  exposed-modules:  Data.PHash.Types
  build-depends:    base >= 4.6 && < 5
  hs-source-dirs:   src
  default-language: Haskell2010
  pkgconfig-depends: pHash

  ghc-options: -Wall

source-repository head
  Type:     git
  Location: https://github.com/michaelxavier/phash
